Сделал бренд товара отдельной сущностью и добавил возможность фильтрации по брендам. Добавил вывод товаров по брендам с другими фильтрами. Сделал систему классов для фильтров, повторяющую иерархию классов товаров, что позволяет легко добавлять и редактировать параметры фильтров и задавать свой набор фильтров для каждого класса товара (при выводе по категориям), результатов поиска и выводу по брендам. Другие мелкие правки.

--- a/app/Resources/views/Cart/cart.html.twig
+++ b/app/Resources/views/Cart/cart.html.twig
@@ -40,10 +40,10 @@
                                 </tbody>
                             </table>
                             <div class="all-cart-buttons">
-                                <button class="button" type="button"><span>Continue Shopping</span></button>
+                                <button class="button" type="button" onclick="location.href='{{ path('app_home_home') }}';"><span>Continue Shopping</span></button>
                                 <div class="floatright">
-                                    <button class="button clear-cart" type="button"><span>Clear Shopping Cart</span></button>
-                                    <button class="button" type="button"><span>Update Shopping Cart</span></button>
+                                    <button class="button clear-cart" type="button" onclick="location.href='{{ path('app_cart_clear') }}'"><span>Clear Shopping Cart</span></button>
+                                    <button class="button" type="button" onclick="location.href='{{ path('app_cart_showcart') }}';"><span>Update Shopping Cart</span></button>
                                 </div>
                             </div>
                         </div>
