--- a/app/Resources/views/Products/FiltersForms/Jacket.html.twig
+++ b/app/Resources/views/Products/FiltersForms/Jacket.html.twig
@@ -1,6 +1,6 @@
 {% extends 'Products/FiltersForms/Default.html.twig' %}
 {% block other_fields %}
-    <div class="sleeveLengthFilter">
+    <div class="sleeveLength_filter">
         <p>
             Sleeve length:
             {{ form_widget(filtersForm.sleeveMin, {'id': 'sleeve-min'}) }} -
