--- a/app/Resources/views/Products/products.html.twig
+++ b/app/Resources/views/Products/products.html.twig
@@ -37,66 +37,25 @@
                         </div>
                         <div class="section-title border-none"><h2>Filters</h2></div>
                         <div class="sidebar-category-list">
-                            <div class="filters">
-                                {% include 'Products/FiltersForms/' ~ filtersTpl ~ '.html.twig' %}
-                            </div>
+                            {% if filtersTpl is defined %}
+                                <div class="filters">
+                                    {% include 'Products/FiltersForms/' ~ filtersTpl ~ '.html.twig' %}
+                                </div>
+                            {% endif %}
                         </div>
                         <div class="section-title border-none"><h2>Manufacturer</h2></div>
                         <div class="sidebar-category-list">
                             <ul>
-                                <li><a href="#">Calvin Klein (1)</a></li>
-                                <li><a href="#">Diesel (1)</a></li>
-                                <li><a href="#">option value (1)</a></li>
-                                <li><a href="#">Polo (1)</a></li>
-                                <li><a href="#">store view (1)</a></li>
-                                <li><a href="#">Tommy Hilfiger (3)</a></li>
-                                <li><a href="#">will be used (1)</a></li>
-                            </ul>
-                        </div>
-                        <div class="section-title border-none"><h2>Color</h2></div>
-                        <div class="sidebar-category-list">
-                            <ul>
-                                <li><a href="#">Black (1)</a></li>
-                                <li><a href="#">Blue (1)</a></li>
-                                <li><a href="#">Green (1)</a></li>
-                                <li><a href="#">Grey (2)</a></li>
-                                <li><a href="#">Red (2)</a></li>
-                                <li><a href="#">White (2)</a></li>
+                                {% for brand in brands %}
+                                    <li><a href="{{ brand.link }}">{{ (brand.title | capitalize)~' ('~brand.count~' )' }}</a> </li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
-                    <div class="sidebar-content">
-                        <div class="section-title no-margin"><h2>Compare Products </h2></div>
-                        <div class="block-content">
-                            <p class="empty">You have no items to compare.</p>
-                        </div>
-                    </div>
-                    <div class="sidebar-content">
-                        <div class="section-title no-margin"><h2>Popular Tags</h2></div>
-                        <div class="popular-tags">
-                            <ul class="tag-list">
-                                <li><a href="#">Curae</a></li>
-                                <li><a href="#">Vestibulum</a></li>
-                                <li><a href="#">ante</a></li>
-                                <li><a href="#">cubilia</a></li>
-                                <li><a href="#">et</a></li>
-                                <li><a href="#">faucibus</a></li>
-                                <li><a href="#">in</a></li>
-                                <li><a href="#">ipsum</a></li>
-                                <li><a href="#">luctus</a></li>
-                                <li><a href="#">orci</a></li>
-                                <li><a href="#">posuere</a></li>
-                                <li><a href="#">primis</a></li>
-                                <li><a href="#">ultrices</a></li>
-                            </ul>
-                            <div class="tag-actions">
-                                <a href="#">View All Tags</a>
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="sidebar-content">
                         <div class="banner-box">
-                            <a href="#"><img src="img/banner/14.jpg" alt=""></a>
+                            <a href="#"><img src={{ asset("img/banner/14.jpg") }} alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -113,20 +72,7 @@
                                     </div>
                                 {{ form_end(orderByForm) }}
                             </div>
-                            <p class="page floatright">Per Page</p>
-                            <div class="filter-by floatright">
-                                <h4>Show </h4>
-                                <form action="#">
-                                    <div class="select-filter">
-                                        <select>
-                                            <option value="10">6</option>
-                                            <option value="10">9</option>
-                                            <option value="20">12</option>
-                                            <option value="30">15</option>
-                                        </select>
-                                    </div>
-                                </form>
-                            </div>
+                            <span class="page floatright" >{{ (productsCount~' products found') }}</span>
                         </div>
                     </div>
                     <div class="clearfix"></div>
@@ -295,7 +241,7 @@
     {{ parent() }}
     <script src="{{ asset("js/Products/QuickView.js") }}" type="text/javascript"></script>
     <script src="{{ asset("js/Products/OrderBy.js") }}" type="text/javascript"></script>
-    <script src="{{ asset("js/Products/priceRange.js") }}" type="text/javascript"></script>
     <script src="{{ asset("js/Products/jquery-ui.min.js") }}" type="text/javascript"></script>
     <script src="{{ asset("js/Products/price-slider.js") }}" type="text/javascript"></script>
+    <script src="{{ asset("js/Products/categories.js") }}" type="text/javascript"></script>
 {% endblock %}
