--- a/app/Resources/views/Product/product.html.twig
+++ b/app/Resources/views/Product/product.html.twig
@@ -53,7 +53,7 @@
                                     <h1> {{ product.title }} </h1>
                                 </div>
                                 <p><strong>Gender: </strong>{{ product.gender|capitalize }}</p>
-                                <p><strong>Brand: </strong>{{ product.brand }}</p>
+                                <p><strong>Brand: </strong>{{ product.brand.title }}</p>
                                 {% block unique_properties %}
                                 {% endblock %}
                                 <p class="availability">Availability: <span>In stock</span></p>
